newsletter align fixed

--- a/src/scss/pages/_home02.scss
+++ b/src/scss/pages/_home02.scss
@@ -396,7 +396,6 @@
   }
 
   &-item {
-    text-align: center;
     max-width: 500px;
 
     h6 {
